--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,3 +9,6 @@ bind-key r source-file /etc/.tmux.conf \; display-message "tmux.conf reloaded."
 # Set easier window split keys
 bind-key h split-window -h
 bind-key v split-window -v
+
+# Mouse Mode
+set -g mouse on
