Added new bind to tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ unbind-key C-b
 bind-key f send-prefix
 
 # Easy config reload
-bind-key r source-file /etc/.tmux.conf \; display-message "tmux.conf reloaded."
+bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 # Set easier window split keys
 bind-key h split-window -h
