--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ unbind-key C-b
 bind-key f send-prefix
 
 # Easy config reload
-bind-key r source-file ~/.tmux.conf
+bind-key r source-file ~/.tmux.conf;
 
 # Set easier window split keys
 bind-key h split-window -h
