added reload message

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ bind-key f send-prefix
 
 # Easy config reload
 bind-key r source-file ~/tmux-config/.tmux.conf;
+display-message "tmux config was reloaded"
 
 # Set easier window split keys
 bind-key h split-window -h
