--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,8 @@ unbind-key C-b
 bind-key f send-prefix
 
 # Easy config reload
-bind-key r source-file ~/tmux-config/.tmux.conf;
-display-message "tmux config was reloaded"
+bind-key r source-file ~/tmux-config/.tmux.conf /; display-message "tmux config was reloaded"
+
 
 # Set easier window split keys
 bind-key h split-window -h
