--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,9 +4,7 @@ unbind-key C-b
 bind-key f send-prefix
 
 # Easy config reload
-bind-key r source-file ~/tmux-config/.tmux.conf /; display-message "tmux config was reloaded"
-
-
+bind-key r source-file ~/tmux-config/.tmux.conf
 # Set easier window split keys
 bind-key h split-window -h
 bind-key v split-window -v
