added reload message

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,8 @@ bind-key f send-prefix
 
 # Easy config reload
 bind-key r source-file ~/tmux-config/.tmux.conf
+bind-key r display-message "Config reloaded!"
+
 # Set easier window split keys
 bind-key h split-window -h
 bind-key v split-window -v
