--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,8 @@ unbind-key C-b
 bind-key f send-prefix
 
 # Set easier window split keys
-bind-key h split-window -h
-bind-key v split-window -v
+bind-key v split-window -h
+bind-key h split-window -v
 
 # Mouse Mode
 set -g mouse on
