added more colors to TMUX config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,3 +18,6 @@ bind -n M-Down select-pane -D
 
 # Better Reload
 bind r source ~/.tmux.conf\\; display "~/.tmux.conf sourced!"
+
+# More Colors
+set-option -sa terminal-overrides ",xterm*:Tc"
