added new color settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,5 +19,6 @@ bind -n M-Down select-pane -D
 # Better Reload
 bind r source ~/.tmux.conf\\; display "~/.tmux.conf sourced!"
 
-# More Colors
-set-option -sa terminal-overrides ",xterm*:Tc"
+# Enable 24-bit color support
+set-option -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ",xterm-256color:Tc"
