--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,3 +22,9 @@ bind r source ~/.tmux.conf\\; display "~/.tmux.conf sourced!"
 # Enable 24-bit color support
 set-option -g default-terminal "tmux-256color"
 set-option -sa terminal-overrides ",xterm-256color:Tc"
+
+# Renumbering Windows and Panes from 0 to 1
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
