added additional settings to split panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,8 @@ unbind-key C-b
 bind-key f send-prefix
 
 # Set easier window split keys
-bind-key v split-window -h
-bind-key h split-window -v
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key h split-window -v -c "#{pane_current_path}"
 
 # Mouse Mode
 set -g mouse on
@@ -28,3 +28,6 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+
+# Open Panes in CWD
+bind '"' split-window -v -c "#{pane_current_path}"
