--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,4 +29,5 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-
+# Set tab color to yellow when active
+set-option -g window-status-current-style bg=yellow, fg=black
