added rebind to zoom function

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,3 +31,6 @@ set-option -g renumber-windows on
 
 # Set tab color to yellow when active
 set-option -g window-status-current-style bg=cyan,fg=black
+
+# Use Alt-z to zoom in and out of panes
+bind -n M-z resize-pane -Z
