--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,10 +11,10 @@ bind-key h split-window -v -c "#{pane_current_path}"
 set -g mouse on
 
 # Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
 
 # Better Reload
 bind r source ~/.tmux.conf\\; display "~/.tmux.conf sourced!"
