added tpm and a few plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,10 @@
+# Add the tmux plugins manager
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'dracula/tmux'
+
+
+run '~/.tmux/plugins/tpm/tpm' 
+
 # use C-j and C-f for the prefix.
 set-option -g prefix C-f
 unbind-key C-b
