--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,12 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'dracula/tmux'
 
+# Dracula Settings
+set -g @dracula-show-powerline true
+set -g @dracula-show-edge-icons true
+set -g @dracula-git-show-remote-status true
+set -g @dracula-military-time true
+set -g @dracula-show-location false
 
 run '~/.tmux/plugins/tpm/tpm' 
 
