adjusted more settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,7 +44,7 @@ bind -n M-z resize-pane -Z
 # Dracula Settings
 set -g @dracula-show-powerline true
 set -g @dracula-show-edge-icons true
-set -g @dracula-git-show-remote-status true
 set -g @dracula-military-time true
 set -g @dracula-show-location false
+set -g @dracula-show-fahrenheit false
 
