--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,3 +41,10 @@ set-option -g window-status-current-style bg=cyan,fg=black
 # Use Alt-z to zoom in and out of panes
 bind -n M-z resize-pane -Z
 
+# Dracula Settings
+set -g @dracula-show-powerline true
+set -g @dracula-show-empty-plugins false
+set -g @dracula-show-edge-icons true
+set -g @dracula-show-left-icon "#S"
+set -g @dracula-military-time true
+set -g @dracula-show-location false
