--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 # Add the tmux plugins manager
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'dracula/tmux'
 
 run '~/.tmux/plugins/tpm/tpm' 
