real tmux settings this time

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,3 +42,6 @@ set-option -g window-status-current-style bg=cyan,fg=black
 # Use Alt-z to zoom in and out of panes
 bind -n M-z resize-pane -Z
 
+# Dracula Settings
+set -g @dracula-show-powerline true
+set -g @dracula-fixed-location "Enzo's Realm"
