--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,4 +44,5 @@ bind -n M-z resize-pane -Z
 
 # Dracula Settings
 set -g @dracula-show-powerline true
+set -g @dracula-show-left-icon "#h | #S"
 set -g @dracula-fixed-location "Enzo's Realm"
