added run commands

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,8 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'dracula/tmux'
 
 run '~/.tmux/plugins/tpm/tpm' 
+run '~/.tmux/plugins/tmux/dracula.tmux'
+run '~/.tmux/plugins/tmux-prefix-highlight/prefix-highlight.tmux'
 
 # use C-j and C-f for the prefix.
 set-option -g prefix C-f
